logs/chert.log
Listing '.'...
Listing './bin'...
Compiling './bin/ashes.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.2.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-1.6.egg-info'...
Listing './lib/python3.5/site-packages/ashes-17.0.0.egg-info'...
Listing './lib/python3.5/site-packages/boltons'...
Listing './lib/python3.5/site-packages/boltons-17.2.0.dist-info'...
Listing './lib/python3.5/site-packages/chert'...
Compiling './lib/python3.5/site-packages/chert/core.py'...
***   File "./lib/python3.5/site-packages/chert/core.py", line 1098
    print 'Changed %s files, regenerating...' % len(changed)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chert/hypertext.py'...
***   File "./lib/python3.5/site-packages/chert/hypertext.py", line 332
    print add_toc(html).encode('utf-8')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chert/scaffold'...
Compiling './lib/python3.5/site-packages/chert/scaffold/custom.py'...
***   File "./lib/python3.5/site-packages/chert/scaffold/custom.py", line 6
    print ' - custom module loaded.'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chert/scaffold/entries'...
Listing './lib/python3.5/site-packages/chert/scaffold/themes'...
Listing './lib/python3.5/site-packages/chert/scaffold/themes/sedimental'...
Listing './lib/python3.5/site-packages/chert/scaffold/themes/sedimental/css'...
Listing './lib/python3.5/site-packages/chert/scaffold/themes/sedimental/img'...
Listing './lib/python3.5/site-packages/chert/scaffold/themes/sedimental/js'...
Listing './lib/python3.5/site-packages/chert/scaffold/uploads'...
Listing './lib/python3.5/site-packages/chert-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/serializer'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib/trie'...
Listing './lib/python3.5/site-packages/html5lib-0.999999.egg-info'...
Listing './lib/python3.5/site-packages/hyperlink'...
Listing './lib/python3.5/site-packages/hyperlink/test'...
Listing './lib/python3.5/site-packages/hyperlink-17.3.1.dist-info'...
Listing './lib/python3.5/site-packages/lithoxyl'...
Compiling './lib/python3.5/site-packages/lithoxyl/p_squared.py'...
***   File "./lib/python3.5/site-packages/lithoxyl/p_squared.py", line 116
    print tmpl % (nsamples, duration, 1000 * duration / nsamples)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lithoxyl/sinks.py'...
***   File "./lib/python3.5/site-packages/lithoxyl/sinks.py", line 63
    raise exc_type, exc_obj, exc_tb
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lithoxyl/tests'...
Compiling './lib/python3.5/site-packages/lithoxyl/tests/test_formatters.py'...
***   File "./lib/python3.5/site-packages/lithoxyl/tests/test_formatters.py", line 32
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lithoxyl/tests/test_sinks.py'...
***   File "./lib/python3.5/site-packages/lithoxyl/tests/test_sinks.py", line 79
    print tr
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lithoxyl-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
